<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signup_container"
>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/pureWhite"
            app:civ_border_overlay="true"
            app:civ_circle_background_color="@color/indigo_100_blacked"
            tools:src="@tools:sample/avatars"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_image_hint_text"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/circle_semitransparent_background"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/hint_add_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="1"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/icon_path_user_outline"
            android:drawableStart="@drawable/icon_path_user_outline"
            android:drawablePadding="8dp"
            android:textColor="@color/indigo.100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image"
            tools:text="Johanna Glied"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_email_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/icon_path_mail"
            android:drawableStart="@drawable/icon_path_mail"
            android:drawablePadding="8dp"
            android:textColor="@color/indigo.100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_edit_text"
            tools:text="johanna.glied@49er.org"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_password_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_path_lock"
            android:drawableStart="@drawable/icon_path_lock"
            android:drawableRight="@drawable/icon_path_eye"
            android:drawableEnd="@drawable/icon_path_eye"
            android:drawablePadding="8dp"
            android:textColor="@color/indigo.100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email_edit_text"
            tools:text="•••••••••••"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/login_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:backgroundTint="@color/pureWhite"
            android:background="@color/pureWhite"
            android:text="@string/create_account_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password_edit_text"
            tools:backgroundTint="@color/pureWhite"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/indigo.100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Terms and conditions"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/indigo.100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Privacy policy"
    />

</androidx.constraintlayout.widget.ConstraintLayout>