...
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/landing_container"
>
    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome!"
...
            android:id="@+id/guideline_vertical_middle"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
...
