...
    <string name="create_user_failed_no_internet">You need an active internet connection to create an account.\n You can access the app in offline mode after that.</string>

    <string name="login_text">Login</string>
    <string name="create_account_text">Create account</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="hint_add_image">Tap to add your photo</string>
    <string name="hint_user_name">Email address</string>
    <string name="hint_user_password">Access code</string>

    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>

...
